--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,10 @@
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
-    <button id="write-cover-letter">Write Cover Letter</button>
-    <textarea id="cover-letter-text" readonly></textarea>
+    <div id="cover-letter-sidebar">
+      <button id="write-cover-letter">Write Cover Letter</button>
+      <textarea id="cover-letter-text" readonly></textarea>
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
