--- a/popup.html
+++ b/popup.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LinkedIn Cover Letter Writer</title>
+    <link rel="stylesheet" href="popup.css">
 </head>
 <body>
+    <div id="popup-container">
+        <button id="write-cover-letter">Write Cover Letter</button>
+        <textarea id="cover-letter-text" readonly></textarea>
+    </div>
     <script src="popup.js"></script>
 </body>
 </html>
